# cass-code

./: BUILD.md  CHANGELOG.md  README.md  claude_code2.0_features.md  package.json
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml  rust-release.yml
cass-cli/: README.md  package.json
cass-rs/: Cargo.toml  README.md
cass-rs/ansi-escape/: Cargo.toml
cass-rs/app-server/: Cargo.toml
cass-rs/app-server-protocol/: Cargo.toml
cass-rs/app-server/src/: codex_message_processor.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
cass-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  lib.rs  mcp_process.rs  rollout.rs
cass-rs/app-server/tests/suite/: archive_conversation.rs  auth.rs  codex_message_processor_flow.rs  config.rs  create_conversation.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  model_list.rs  rate_limits.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
cass-rs/app-server/tests/suite/v2/: account.rs  thread_archive.rs  thread_list.rs  thread_resume.rs  thread_start.rs
cass-rs/apply-patch/: Cargo.toml
cass-rs/arg0/: Cargo.toml
cass-rs/arg0/src/: lib.rs
cass-rs/async-utils/: Cargo.toml
cass-rs/backend-client/: Cargo.toml
cass-rs/cass-backend-openapi-models/: Cargo.toml
cass-rs/chatgpt/: Cargo.toml
cass-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
cass-rs/chatgpt/tests/suite/: apply_command_e2e.rs
cass-rs/cli/: Cargo.toml
cass-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs
cass-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
cass-rs/cloud-tasks/: Cargo.toml
cass-rs/cloud-tasks-client/: Cargo.toml
cass-rs/cloud-tasks-client/src/: http.rs
cass-rs/cloud-tasks/src/: app.rs  cli.rs  lib.rs  new_task.rs  ui.rs  util.rs
cass-rs/cloud-tasks/tests/: env_filter.rs
cass-rs/common/: Cargo.toml
cass-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
cass-rs/core/: Cargo.toml
cass-rs/core/src/: apply_patch.rs  auth.rs  cass.rs  cass_conversation.rs  cass_delegate.rs  chat_completions.rs  client.rs  client_common.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  otel_init.rs  parse_command.rs  project_doc.rs  response_processing.rs  safety.rs  shell.rs  spawn.rs  truncate.rs  user_instructions.rs
cass-rs/core/src/auth/: storage.rs
cass-rs/core/src/cass_mod/: compact.rs
cass-rs/core/src/config/: edit.rs  mod.rs  profile.rs  types.rs
cass-rs/core/src/config_loader/: macos.rs  mod.rs
cass-rs/core/src/context_manager/: history.rs  history_tests.rs  normalize.rs  truncate.rs
cass-rs/core/src/mcp/: auth.rs
cass-rs/core/src/rollout/: list.rs  mod.rs  policy.rs  recorder.rs  tests.rs
cass-rs/core/src/sandboxing/: assessment.rs  mod.rs
cass-rs/core/src/state/: service.rs  session.rs  turn.rs
cass-rs/core/src/tasks/: compact.rs  ghost_snapshot.rs  mod.rs  regular.rs  review.rs  undo.rs  user_shell.rs
cass-rs/core/src/tools/: context.rs  events.rs  orchestrator.rs  parallel.rs  registry.rs  router.rs  sandboxing.rs  spec.rs
cass-rs/core/src/tools/handlers/: apply_patch.rs  list_dir.rs  mcp.rs  mcp_resource.rs  plan.rs  read_file.rs  shell.rs  view_image.rs
cass-rs/core/src/tools/runtimes/: apply_patch.rs  shell.rs  unified_exec.rs
cass-rs/core/src/unified_exec/: mod.rs  session.rs  session_manager.rs
cass-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
cass-rs/core/tests/common/: Cargo.toml  lib.rs  test_cass.rs  test_cass_exec.rs
cass-rs/core/tests/suite/: abort_tasks.rs  apply_patch_cli.rs  apply_patch_freeform.rs  approvals.rs  auth_refresh.rs  cass_delegate.rs  cli_stream.rs  client.rs  compact.rs  compact_resume_fork.rs  deprecation_notice.rs  exec.rs  fork_conversation.rs  grep_files.rs  items.rs  json_result.rs  list_dir.rs  live_cli.rs  mod.rs  model_overrides.rs  model_tools.rs  otel.rs  prompt_caching.rs  read_file.rs  resume.rs  review.rs  rmcp_client.rs  rollout_list_find.rs  seatbelt.rs  shell_serialization.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs  tool_harness.rs  tool_parallelism.rs  tools.rs  truncation.rs  undo.rs  unified_exec.rs  user_notification.rs  user_shell_cmd.rs  (+1 more)
cass-rs/exec/: Cargo.toml
cass-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  lib.rs  main.rs
cass-rs/exec/tests/: event_processor_with_json_output.rs
cass-rs/exec/tests/suite/: apply_patch.rs  auth_env.rs  originator.rs  output_schema.rs  resume.rs  sandbox.rs  server_error_exit.rs
cass-rs/execpolicy/: Cargo.toml
cass-rs/feedback/: Cargo.toml
cass-rs/file-search/: Cargo.toml
cass-rs/keyring-store/: Cargo.toml
cass-rs/linux-sandbox/: Cargo.toml
cass-rs/login/: Cargo.toml
cass-rs/mcp-server/: Cargo.toml
cass-rs/mcp-server/src/: codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
cass-rs/mcp-server/tests/common/: Cargo.toml  lib.rs  mcp_process.rs
cass-rs/mcp-server/tests/suite/: codex_tool.rs  mod.rs
cass-rs/ollama/: Cargo.toml
cass-rs/otel/: Cargo.toml
cass-rs/process-hardening/: Cargo.toml
cass-rs/protocol/: Cargo.toml
cass-rs/protocol-ts/: Cargo.toml
cass-rs/protocol-ts/src/: lib.rs  main.rs
cass-rs/tui/: Cargo.toml
cass-rs/utils/image/: Cargo.toml
cass-rs/utils/image/src/: lib.rs
docs/: CLA.md  advanced.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  experimental.md  faq.md  getting-started.md  install.md  open-source-fund.md  prompts.md  release_management.md  sandbox.md  slash_commands.md  zdr.md
(+117 files in other folders)
