[package]
edition = "2024"
name = "cass-app-server"
version = { workspace = true }

[[bin]]
name = "cass-app-server"
path = "src/main.rs"

[lib]
name = "cass_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cass-arg0 = { workspace = true }
cass-common = { workspace = true, features = ["cli"] }
cass-core = { workspace = true }
cass-backend-client = { workspace = true }
cass-file-search = { workspace = true }
cass-login = { workspace = true }
cass-protocol = { workspace = true }
cass-app-server-protocol = { workspace = true }
cass-feedback = { workspace = true }
cass-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
opentelemetry-appender-tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
assert_cmd = { workspace = true }
base64 = { workspace = true }
core_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
wiremock = { workspace = true }
