[package]
edition = "2024"
name = "cass-arg0"
version = { workspace = true }

[lib]
name = "cass_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cass-apply-patch = { workspace = true }
cass-core = { workspace = true }
cass-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
