[package]
edition = "2024"
name = "cass-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cass-common = { workspace = true, features = ["cli"] }
cass-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
cass-git = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
