[package]
edition = "2024"
name = "cass-common"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
cass-core = { workspace = true }
cass-protocol = { workspace = true }
cass-app-server-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []
