[package]
edition = "2024"
name = "cass-mcp-server"
version = { workspace = true }

[[bin]]
name = "cass-mcp-server"
path = "src/main.rs"

[lib]
name = "cass_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cass-arg0 = { workspace = true }
cass-common = { workspace = true, features = ["cli"] }
cass-core = { workspace = true }
cass-protocol = { workspace = true }
cass-utils-json-to-toml = { workspace = true }
mcp-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = { workspace = true }
core_test_support = { workspace = true }
mcp_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
