[package]
name = "cass-utils-image"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
cass-utils-cache = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
image = { workspace = true, features = ["jpeg", "png"] }
tempfile = { workspace = true }
